About page designed

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="icon" href="assest/icons8-sri-lanka-48.png">
 </head>
 <body>
+
+    <!-------------------- 1.Home ------------------------->
     <div id="header">
         <div class="container">
             <nav>
                 <img src="assest/flag-of-sri-lanka-flag-of-the-philippines-stock-photography-flag-thumbnail.png" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Locations</a></li>
                     <li><a href="#">Contact us</a></li>
                     <li><a href="#">Select language </a></li>
                 </ul>
@@ -24,18 +27,34 @@
                 <h2>"In the embrace of islands, find solace in simplicity and beauty."</h2>
             </div>
         </div>
+        <style>
+            body{
+                background-image: url(assest/home.jpg);
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                height: 100vh;
+                margin: 0;
+                padding: 0;
+            }
+           </style>
     </div>
-   <style>
-    body{
-        background-image: url(assest/home.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-    }
-   </style>
-    
+   
+
+   <!-------------------- 2.About ------------------------->
+   <div id="About">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="assest/about.jpg">    
+                </div>
+                <div class="about-col-2">
+                    <h1>About</h1>
+                </div>
+            </div>
+        </div>
+   </div>
+   
+        
 </body>
 </html>
