About Page implemented

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <div class="header-text">
-                <h1> <span class="animation">Celon</span> View</h1>
+                <h1> <span >Celon</span> View</h1>
                 <h2>"In the embrace of islands, find solace in simplicity and beauty."</h2>
             </div>
         </div>
@@ -37,7 +37,10 @@
                 margin: 0;
                 padding: 0;
             }
-           </style>
+        </style>
+        <div class="welcome">
+            <h1><i>Welcome to Sri Lanka</i></h1>
+        </div>
     </div>
    
 
@@ -49,7 +52,23 @@
                     <img src="assest/about.jpg">    
                 </div>
                 <div class="about-col-2">
-                    <h1>About</h1>
+                    <h1 class="sub-title">About</h1>
+                    <p class="pharagraph"> Sri Lanka, formerly known as Ceylon, is an island country located in South Asia, situated in the Indian Ocean.Sri Lanka is an island nation located southeast of India, separated by the Palk Strait. It has a diverse <mark>landscape </mark>  , including <mark>tropical beaches</mark> ,<mark>lush rainforests</mark> , and <mark>misty highlands</mark>.<p>
+                        <ul class="points">
+                            <li>Capital City :- <b>Sri jayawardhanapura Kotte</b> </li>
+                            <br>
+                            <br>
+                            <li>Population :- <b>21 Million</b></li>
+                            <br>
+                            <br>
+                            <li>Languages :- <b>Sinhala</b> / <b>Tamil</b></li>
+                        </ul>
+
+                        <p class="pharagraph-2">
+                            Sri Lanka has a rich history dating back thousands of years. It was home to the ancient Sinhalese civilization and has been influenced by various cultures, including Indian, Arab, and European. The island was colonized by the Portuguese, Dutch, and British before gaining <i><b>independence in 1948</b></i> .
+                            <br><br>Sri Lanka has a vibrant and diverse culture, influenced by <u>Buddhism, Hinduism, Islam, and Christianity</u>. Traditional arts, music, dance, and cuisine are significant aspects of Sri Lankan culture. The island is also known for its colorful festivals, such as the Esala Perahera in Kandy and the Tamil festival of Thai Pongal.
+                            <br><br>Sri Lanka is renowned for its stunning landscapes and cultural heritage. Popular tourist attractions include the ancient city of <mark> Anuradhapura</mark>, the <mark>Sigiriya rock fortress</mark> , <mark>the Temple of the Tooth</mark>  in Kandy, <mark>the tea plantations</mark>  in Nuwara Eliya, and the <mark>wildlife sanctuaries</mark>  such as Yala National Park.
+                        </p>
                 </div>
             </div>
         </div>
