Destination page designed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">Destinations</a></li>
                     <li><a href="#">Contact us</a></li>
                     <li><a href="#">Select language </a></li>
                 </ul>
@@ -74,6 +74,22 @@
         </div>
    </div>
    
-        
+   <!-------------------- 3.Destinations ------------------------->
+   <div id="destinations">
+        <div class="container">
+            <h1 class="sub-title-2">Destinations</h1>
+            <div class="destinations-list">
+                <div class="wild-img">
+                    <img src="assest/wild.jpg" >
+                    <a href="#"><h3>Wild</h3></a>
+                </div>
+
+                <div class="festivals-img">
+                    <img src="assest/festivals.jpg">
+                    <a href="#"><h3>Festivals</h3></a>
+                </div>
+            </div>
+        </div>
+   </div>
 </body>
 </html>
