Destination Page Implemented

--- a/index.html
+++ b/index.html
@@ -76,20 +76,35 @@
    
    <!-------------------- 3.Destinations ------------------------->
    <div id="destinations">
-        <div class="container">
-            <h1 class="sub-title-2">Destinations</h1>
-            <div class="destinations-list">
-                <div class="wild-img">
-                    <img src="assest/wild.jpg" >
-                    <a href="#"><h3>Wild</h3></a>
-                </div>
-
-                <div class="festivals-img">
-                    <img src="assest/festivals.jpg">
-                    <a href="#"><h3>Festivals</h3></a>
-                </div>
+    <div class="container">
+        <h1 class="sub-title-1">Destinations</h1>
+        <div class="destinations-list">
+            <div>
+                 <a href="#"><h2 class="galleFort-text">Galle Fort</h2></a>
             </div>
+            <div>
+                 <a href="#"><h2 class="festivals-text">Ella Rock</h2></a>
+           </div>
+           <div>
+                 <a href="#"><h2 class="wild-text">Ambuluwawa</h2></a> 
+           </div>
+           <div>
+                 <a href="#"><h2 class="wild-text">Arugam Bay Beach</h2></a> 
+           </div>
+           <div>
+                 <a href="#"><h2 class="wild-text">Yala National Park</h2></a> 
+           </div>
+           <div>
+                  <a href="#"><h2 class="wild-text">Nine-Arches Bridge</h2></a> 
+           </div>
+           <div>
+                 <a href="#"><h2 class="wild-text">Sinharaja Rain Forst</h2></a> 
+           </div>
+           <div>
+                 <a href="#"><h2 class="wild-text">Mirissa</h2></a> 
+           </div>
         </div>
+    </div>
    </div>
 </body>
 </html>
