Contact Page implemented

--- a/index.html
+++ b/index.html
@@ -106,5 +106,27 @@
         </div>
     </div>
    </div>
+
+   <!-------------------- 4.Contact Us ------------------------->
+   <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title-01">Contact us</h1>
+                </div>
+        
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Enter Your Full Name" required>
+                        <input type="text" name="Country" placeholder="Enter Your Country" required>
+                        <input type="email" name="email" placeholder="Enter Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Enter Your Message " required></textarea>
+                        <button type="submit" class="btn">Submit</button>
+                        <button type="cancel" class="btn">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>   
+   </div>
 </body>
 </html>
