Page Footer implemented

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
                 </div>
             </div>
         </div>   
+        <div class="copyright">
+            <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
+            Copyright CelonViewbr
+             <br> <br> 011 2525254 / 0758798514 </p>
+        </div>
    </div>
 </body>
 </html>
