--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h1 class="sub-title-1">Destinations</h1>
         <div class="destinations-list">
             <div>
-                 <a href="#"><h2 class="galleFort-text">Galle Fort</h2></a>
+                 <a href="http://127.0.0.1:5501/galleFort.html" target="_blank"><h2 class="galleFort-text">Galle Fort</h2></a>
             </div>
             <div>
                  <a href="#"><h2 class="festivals-text">Ella Rock</h2></a>
@@ -129,7 +129,7 @@
         </div>   
         <div class="copyright">
             <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
-            Copyright CelonViewbr
+            Copyright CelonView
              <br> <br> 011 2525254 / 0758798514 </p>
         </div>
    </div>
