--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                  <a href="http://127.0.0.1:5501/galleFort.html" target="_blank"><h2 class="galleFort-text">Galle Fort</h2></a>
             </div>
             <div>
-                 <a href="#"><h2 class="festivals-text">Ella Rock</h2></a>
+                 <a href="http://127.0.0.1:5501/ellaRock.html" target="_blank"><h2 class="festivals-text">Ella Rock</h2></a>
            </div>
            <div>
                  <a href="#"><h2 class="wild-text">Ambuluwawa</h2></a> 
