--- a/ellaRock.html
+++ b/ellaRock.html
@@ -13,14 +13,21 @@
             <h4>Ella Rock, nestled in the lush green hills of Ella in Sri Lanka, is a prominent natural landmark renowned for its breathtaking vistas, rewarding hiking trails, and serene ambiance.</h4>
             <ul>
                 <li><h2><b>Natural Splendor</b></h2></li>
-                <p>Ella Rock captivates visitors with its pristine natural beauty and panoramic views of the surrounding landscape. Towering above the picturesque town of Ella, this rugged peak is adorned with dense forests, cascading waterfalls, and verdant tea plantations, creating a scene of unparalleled serenity and tranquility.</p>
+                <p>Ella Rock captivates visitors with its <mark>pristine natural beauty</mark>  and <mark>panoramic views</mark>  of the surrounding landscape. Towering above the picturesque town of Ella, this rugged peak is adorned with 
+                    <ul>
+                        <li>dense forests</li>
+                        <li>cascading waterfalls</li>
+                        <li>verdant tea plantations</li>
+                        <br>
+                    </ul>  creating a scene of unparalleled serenity and tranquility.</p>
                 <br>
                 <li><h2><b>Hiking Adventure</b></h2></li>
-                <p>Embarking on a hike to Ella Rock is an exhilarating adventure that offers a perfect blend of challenge and reward. The trail begins amidst lush tea estates and gradually ascends through verdant woodlands, traversing rocky paths and narrow ridges. Along the way, trekkers are treated to glimpses of endemic flora and fauna, adding to the allure of the journey.
+
+                <p> <i>Embarking on a hike to Ella Rock is an exhilarating adventure that offers a perfect blend of challenge and reward.The trail begins amidst lush tea estates and gradually ascends through verdant woodlands, traversing rocky paths and narrow ridges. Along the way, trekkers are treated to glimpses of endemic flora and fauna, adding to the allure of the journey.</i> 
                 </p>
                 <br>
                 <li><h2><b>Sunrise and Sunset Spectacle</b></h2></li>
-                <p>Ella Rock is renowned for its spectacular sunrise and sunset vistas, which cast a magical glow over the landscape, painting the skies in hues of orange, pink, and gold. Witnessing the first light of dawn or the fading rays of dusk from the summit of Ella Rock is a mesmerizing experience that leaves a lasting impression on visitors.</p>
+                <p>Ella Rock is  renowned for its spectacular <u>sunrise and sunset vistas</u> , which cast a magical glow over the landscape, painting the skies in hues of orange, pink, and gold. Witnessing the first light of dawn or the fading rays of dusk from the summit of Ella Rock is a <b>mesmerizing experience</b>  that leaves a lasting impression on visitors.</p>
             </ul>
         </div>
         <div class="ellaRock-img">
