--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                  <a href="http://127.0.0.1:5501/ellaRock.html" target="_blank"><h2 class="festivals-text">Ella Rock</h2></a>
            </div>
            <div>
-                 <a href="#"><h2 class="wild-text">Ambuluwawa</h2></a> 
+                 <a href="http://127.0.0.1:5501/ambuluwawa.html" target="_blank"><h2 class="wild-text">Ambuluwawa</h2></a> 
            </div>
            <div>
                  <a href="#"><h2 class="wild-text">Arugam Bay Beach</h2></a> 
