--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                  <a href="http://127.0.0.1:5501/ambuluwawa.html" target="_blank"><h2 class="wild-text">Ambuluwawa</h2></a> 
            </div>
            <div>
-                 <a href="#"><h2 class="wild-text">Arugam Bay Beach</h2></a> 
+                 <a href="http://127.0.0.1:5501/ArugamBayBeach.html" target="_blank"><h2 class="wild-text">Arugam Bay Beach</h2></a> 
            </div>
            <div>
                  <a href="#"><h2 class="wild-text">Yala National Park</h2></a> 
