--- a/ArugamBayBeach.html
+++ b/ArugamBayBeach.html
@@ -9,7 +9,93 @@
 </head>
     <div id="ArugamBayBeach">
         <h1 class="title">ArugamBay Beach</h1>
+        <img src="assest/arugambay beach final].jpg" class="img-arugambay" >
+    
+        <p class="des-aru">Arugam Bay Beach is situated on the <mark>southeastern coast</mark>  of Sri Lanka, in the town of Arugam Bay, which falls under the <u>Pottuvil division</u>  of the  <u>Ampara district</u>. It is nestled along the Indian Ocean shoreline, approximately <b>320 kilometers east of Colombo, the capital city of Sri Lanka.</b> </p>
+        <br>
+        <p class="dec2">
+            Arugam Bay Beach is renowned worldwide for its 
+            <ul>
+                <li>breathtaking natural beauty</li>
+                <li>vibrant atmosphere</li>
+                <li>exceptional surfing conditions<li>
+            </ul> Stretching along several kilometers of golden coastline, the beach boasts pristine sands, crystal-clear azure waters, and a backdrop of lush greenery, creating an idyllic tropical paradise.
+        </p>
     </div>
+   <div>
+    <style>
+        table {
+            width: 80%;
+            border-collapse: collapse;
+            border: 2px solid;
+            margin-left: 10%;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid black;
+            border-right: 1px solid
+        }
+        th {
+            background-color: lightblue;
+        }
+    </style>
+
+    <table>
+        <tr>
+            <th>Category</th>
+            <th>Details</th>
+        </tr>
+        <tr>
+            <td>Location</td>
+            <td>Arugam Bay, Pottuvil, Eastern Province, Sri Lanka</td>
+        </tr>
+        <tr>
+            <td>Coordinates</td>
+            <td>6.8422° N latitude, 81.8360° E longitude</td>
+        </tr>
+        <tr>
+            <td>Description</td>
+            <td>A renowned surfing destination with golden sands, azure waters, and a laid-back atmosphere</td>
+        </tr>
+        <tr>
+            <td>Activities</td>
+            <td>Surfing, swimming, snorkeling, sunbathing, beach volleyball</td>
+        </tr>
+        <tr>
+            <td>Best Time to Visit</td>
+            <td>May to October for surfing; November to April for calm swimming conditions</td>
+        </tr>
+        <tr>
+            <td>Surf Breaks</td>
+            <td>Main Point, Whiskey Point, Peanut Farm, Elephant Rock, Crocodile Rock</td>
+        </tr>
+        <tr>
+            <td>Surfing Season</td>
+            <td>April to October, with peak waves in June and July</td>
+        </tr>
+        <tr>
+            <td>Nearby Attractions</td>
+            <td>Lahugala National Park, Kumana National Park, Elephant Rock, Panama Tank, Muhudu Maha Viharaya</td>
+        </tr>
+        <tr>
+            <td>Accommodation</td>
+            <td>Beachside resorts, guesthouses, hostels, and homestays catering to various budgets</td>
+        </tr>
+        <tr>
+            <td>Dining Options</td>
+            <td>Beachside cafes, seafood restaurants, and local eateries serving a variety of cuisines</td>
+        </tr>
+        <tr>
+            <td>Transportation</td>
+            <td>Accessible by road from major cities like Colombo and Kandy; local buses, taxis, and tuk-tuks available</td>
+        </tr>
+        <tr>
+            <td>Conservation Efforts</td>
+            <td>Conservation initiatives to protect marine life and preserve the beach's natural beauty</td>
+        </tr>
+    </table>
+   </div>
 
     
 
