--- a/ArugamBayBeach.html
+++ b/ArugamBayBeach.html
@@ -56,23 +56,23 @@
         </tr>
         <tr>
             <td>Description</td>
-            <td>A renowned surfing destination with golden sands, azure waters, and a laid-back atmosphere</td>
+            <td>A renowned surfing destination with <b>golden sands, azure waters, and a laid-back atmosphere</b> </td>
         </tr>
         <tr>
             <td>Activities</td>
-            <td>Surfing, swimming, snorkeling, sunbathing, beach volleyball</td>
+            <td> <mark>Surfing, swimming, snorkeling, sunbathing, beach volleyball</mark> </td>
         </tr>
         <tr>
             <td>Best Time to Visit</td>
-            <td>May to October for surfing; November to April for calm swimming conditions</td>
+            <td> <u>May to October</u> for <mark>surfing</mark> ; <u>November to April</u>  for <mark>calm swimming conditions</mark> </td>
         </tr>
         <tr>
             <td>Surf Breaks</td>
-            <td>Main Point, Whiskey Point, Peanut Farm, Elephant Rock, Crocodile Rock</td>
+            <td><i>Main Point, Whiskey Point, Peanut Farm, Elephant Rock, Crocodile Rock</i> </td>
         </tr>
         <tr>
             <td>Surfing Season</td>
-            <td>April to October, with peak waves in June and July</td>
+            <td> <b>April to October</b> , with peak waves in June and July</td>
         </tr>
         <tr>
             <td>Nearby Attractions</td>
@@ -96,7 +96,11 @@
         </tr>
     </table>
    </div>
-
+   <div class="copyright">
+    <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
+    Copyright CelonView
+     <br> <br> 011 2525254 / 0758798514 </p>
+   </div>
     
 
 <body>
