--- a/ambuluwawa.html
+++ b/ambuluwawa.html
@@ -24,6 +24,11 @@
             </ul>
        </div>
     </div>
+    <div class="copyright">
+        <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
+        Copyright CelonView
+         <br> <br> 011 2525254 / 0758798514 </p>
+    </div>
 <body>
     
 </body>
