--- a/galleFort.html
+++ b/galleFort.html
@@ -36,6 +36,11 @@
             <img src="assest/GalleFortCollage.jpg" >
         </div>
     </div>
+    <div class="copyright">
+        <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
+        Copyright CelonView
+         <br> <br> 011 2525254 / 0758798514 </p>
+    </div>
     
 <body>
     
