--- a/ellaRock.html
+++ b/ellaRock.html
@@ -34,6 +34,11 @@
             <img src="" >
         </div>
     </div>
+    <div class="copyright">
+        <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
+        Copyright CelonView
+         <br> <br> 011 2525254 / 0758798514 </p>
+    </div>
 <body>
     
 </body>
