--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                  <a href="http://127.0.0.1:5501/ArugamBayBeach.html" target="_blank"><h2 class="wild-text">Arugam Bay Beach</h2></a> 
            </div>
            <div>
-                 <a href="#"><h2 class="wild-text">Yala National Park</h2></a> 
+                 <a href="http://127.0.0.1:5501/Yala.html" target="_blank"><h2 class="wild-text">Yala National Park</h2></a> 
            </div>
            <div>
-                  <a href="#"><h2 class="wild-text">Nine-Arches Bridge</h2></a> 
+                  <a href="http://127.0.0.1:5501/NineArch.html" target="_blank"><h2 class="wild-text">Nine-Arches Bridge</h2></a> 
            </div>
            <div>
                  <a href="#"><h2 class="wild-text">Sinharaja Rain Forst</h2></a> 
