--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <a href="http://127.0.0.1:5501/NineArch.html" target="_blank"><h2 class="wild-text">Nine-Arches Bridge</h2></a> 
            </div>
            <div>
-                 <a href="#"><h2 class="wild-text">Sinharaja Rain Forst</h2></a> 
+                 <a href="http://127.0.0.1:5501/Sinharaja.html" target="_blank"><h2 class="wild-text">Sinharaja Rain Forst</h2></a> 
            </div>
            <div>
                  <a href="#"><h2 class="wild-text">Mirissa</h2></a> 
