--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <div class="header-text">
-                <h1> <span >Celon</span> View</h1>
+                <h1> <span >Ceylon</span> View</h1>
                 <h2>"In the embrace of islands, find solace in simplicity and beauty."</h2>
             </div>
         </div>
@@ -204,7 +204,7 @@
    
    <div class="copyright">
     <p class="Copyrighttext">All Rights Reserved &copy; 2024 <br>
-    Copyright CelonView
+    Copyright CeylonView
      <br> <br> 011 2525254 / 0758798514 </p>
 </div>
 </body>
