--- a/ambuluwawa.html
+++ b/ambuluwawa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ambuluwawa Tower</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/Ambuluwawa.css">
     <link rel="icon" href="assest/tower.png">
 </head>
     <div id="Ambuluwawa Tower">
