--- a/ArugamBayBeach.html
+++ b/ArugamBayBeach.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArugamBay Beach</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/ArugamBayBeach.css">
     <link rel="icon" href="assest/beach.png">
 </head>
     <div id="ArugamBayBeach">
