--- a/ellaRock.html
+++ b/ellaRock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ella Rock</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/EllaRock.css">
     <link rel="icon" href="assest/hill.png">
 </head>
     <div id="EllaRock">
