--- a/galleFort.html
+++ b/galleFort.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galle Fort</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/GalleFort.css">
     <link rel="icon" href="assest/fortress.png">
 </head>
     <div id="GalleFort">
