--- a/NineArch.html
+++ b/NineArch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NineArchesBridge</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/NineArch.css">
     <link rel="icon" href="assest/icons8-bridge-50.png">
 </head>
 <body>
