--- a/Yala.html
+++ b/Yala.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YalaNationalPark</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/Yala.css">
     <link rel="icon" href="assest/icons8-elephant-50.png">
 </head>
 <body>
