--- a/ambuluwawa.html
+++ b/ambuluwawa.html
@@ -10,7 +10,7 @@
     <div id="Ambuluwawa Tower">
        <div class="Heading">
             <h1>Ambuluwawa Tower</h1>
-            <img src="assest/Ambuluwawa (1).jpg" >
+            <img src="/assest/AmbuluwawaCover.jpg" >
             <h4>Ambuluwawa Tower, perched atop the Ambuluwawa mountain range near Gampola in Sri Lanka, is a distinctive architectural marvel that offers a unique blend of religious, cultural, and natural elements.</h4>
             <ul>
                 <li><h2><b>Iconic Landmark</b></h2></li>
