--- a/ArugamBayBeach.html
+++ b/ArugamBayBeach.html
@@ -9,7 +9,7 @@
 </head>
     <div id="ArugamBayBeach">
         <h1 class="title">ArugamBay Beach</h1>
-        <img src="assest/arugambay beach final].jpg" class="img-arugambay" >
+        <img src="assest/ArugambayBeachCover.jpg" class="img-arugambay" >
     
         <p class="des-aru">Arugam Bay Beach is situated on the <mark>southeastern coast</mark>  of Sri Lanka, in the town of Arugam Bay, which falls under the <u>Pottuvil division</u>  of the  <u>Ampara district</u>. It is nestled along the Indian Ocean shoreline, approximately <b>320 kilometers east of Colombo, the capital city of Sri Lanka.</b> </p>
         <br>
