--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celon View</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/Home.css">
     <link rel="icon" href="assest/icons8-sri-lanka-48.png">
 </head>
 <body>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="assest/about.jpg">    
+                    <img src="/assest/AboutPageCover.jpg">    
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
