--- a/Sinharaja.html
+++ b/Sinharaja.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinharaja Rain Forest</title>
-    <link rel="stylesheet" href="Pstyle.css">
+    <link rel="stylesheet" href="/css/Sinharaja.css">
     <link rel="icon" href="assest/icons8-forest-50.png">
 </head>
 <body>
     <div id="SinharajaRainForest">
         <div class="Heading">
             <h1 class="title 2">Sinharaja Rain Forest</h1>
-            <img src="assest/00001.jpg" class="img-sinharaja">
+            <img src="/assest/SinharajaCoverCollage.jpg" class="img-sinharaja">
             <p class="des-sinharaja"> Sinharaja Rainforest, located in the southwest corner of Sri Lanka, is a <mark>UNESCO World Heritage</mark>  Site and one of the <u>island's last remaining expanses of tropical rainforest</u>. Spanning an area of approximately <b>11,187 hectares</b> , Sinharaja is a biodiversity hotspot, boasting an incredible array of endemic flora and fauna found nowhere else on earth. The forest's name, which translates to <b>"Lion Kingdom"</b>  evokes its status as a sanctuary for the majestic Sri Lankan lion, now extinct on the island. Sinharaja is a haven for nature enthusiasts and researchers alike, offering opportunities to discover rare species of 
                 <ul>
                     <li>plants</li>
