--- a/ellaRock.html
+++ b/ellaRock.html
@@ -10,7 +10,7 @@
     <div id="EllaRock">
         <div class="Heading">
             <h1>Ella Rock</h1>
-            <h4>Ella Rock, nestled in the lush green hills of Ella in Sri Lanka, is a prominent natural landmark renowned for its breathtaking vistas, rewarding hiking trails, and serene ambiance.</h4>
+            <h4>lla Rock, nestled in the lush green hills of Ella in Sri Lanka, is a prominent natural landmark renowned for its breathtaking vistas, rewarding hiking trails, and serene ambiance.</h4>
             <ul>
                 <li><h2><b>Natural Splendor</b></h2></li>
                 <p>Ella Rock captivates visitors with its <mark>pristine natural beauty</mark>  and <mark>panoramic views</mark>  of the surrounding landscape. Towering above the picturesque town of Ella, this rugged peak is adorned with 
