--- a/galleFort.html
+++ b/galleFort.html
@@ -10,7 +10,7 @@
     <div id="GalleFort">
         <div class="Heading" >
             <h1>Galle Fort</h1>
-            <h4> Galle Fort, located in the southern coastal city of Galle in Sri Lanka, stands as a testament to the island nation's rich colonial history and architectural heritage.</h4>
+            <h4>alle Fort, located in the southern coastal city of Galle in Sri Lanka, stands as a testament to the island nation's rich colonial history and architectural heritage.</h4>
             <ul>
                 <li><h2><b>Historical Significance</b></h2></li>
                 <p>Galle Fort, a <mark>UNESCO World Heritage</mark>  Site, holds immense historical significance as one of the best-preserved examples of a fortified city built by European colonizers in South and Southeast Asia. Originally constructed by the Portuguese in the 16 <sup>th</sup>  century, it later underwent extensive fortification by the Dutch in the 17 <sup>th</sup>  century, who expanded and strengthened its walls to defend against potential invasions by competing colonial powers.</p>
