--- a/ambuluwawa.html
+++ b/ambuluwawa.html
@@ -11,7 +11,7 @@
        <div class="Heading">
             <h1>Ambuluwawa Tower</h1>
             <img src="/assest/AmbuluwawaCover.jpg" >
-            <h4>Ambuluwawa Tower, perched atop the Ambuluwawa mountain range near Gampola in Sri Lanka, is a distinctive architectural marvel that offers a unique blend of religious, cultural, and natural elements.</h4>
+            <h4>mbuluwawa Tower, perched atop the Ambuluwawa mountain range near Gampola in Sri Lanka, is a distinctive architectural marvel that offers a unique blend of religious, cultural, and natural elements.</h4>
             <ul>
                 <li><h2><b>Iconic Landmark</b></h2></li>
                 <p>Ambuluwawa Tower stands as an iconic landmark amidst the lush greenery of the Ambuluwawa mountain range. Rising majestically above the verdant landscape, this towering structure is <u>instantly recognizable for its striking silhouette and commanding presence.</u> </p>
