Add Video For Destination 6

--- a/NineArch.html
+++ b/NineArch.html
@@ -15,6 +15,11 @@
 
             <p>The ine Arch Bridge, nestled in the scenic hills of Ella within Sri Lanka's <b>Badulla District</b> , stands as a testament to both <i>architectural ingenuity and natural beauty</i> . Constructed during the British colonial period between <b>1919</b>  and <b>1921</b> , this iconic bridge is a striking example of <mark>colonial-era engineering</mark> . Carved from <u>bricks, cement, and stone</u> , the bridge spans a picturesque gorge with its nine magnificent arches, hence its name. Rising approximately 24 meters above the verdant landscape and stretching <b>91 meters in length</b> , the bridge offers breathtaking panoramic views of the surrounding tea plantations and lush greenery. Today, it serves not only as a vital railway link but also as a beloved tourist attraction, drawing visitors from around the world to marvel at its architectural splendor and soak in the tranquil ambiance of the Ella area. Whether admired from afar or traversed <i>on foot</i> , the Nine Arch Bridge remains an enduring symbol of Sri Lanka's rich history and natural charm.</p>
         </div>
+
+        <video  controls width="100%" height="400">
+            <source src="/assest/videos/nineArchVideo.mp4"> 
+         </video>
+
         <div>
             <style>
                 table {
