--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="assest/flag-of-sri-lanka-flag-of-the-philippines-stock-photography-flag-thumbnail.png" class="logo">
+                <img src="/assest/CeylonViewLogo.png" class="logo">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#About">About</a></li>
